--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "primeicons": "^6.0.1",
-    "primereact": "^9.6.2",
+    "primereact": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "urql": "^4.0.5"
+    "urql": "^4.0.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -27,6 +28,7 @@
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/validator": "^13.11.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
