--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
