--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@types/lodash": "^4.14.199",
+    "@types/luxon": "^3.3.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/validator": "^13.11.2",
