--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rjsf/utils": "^5.14.1",
     "@rjsf/validator-ajv8": "^5.14.1",
     "@tanstack/react-query": "^4.35.3",
+    "@types/react-helmet": "^6.1.9",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
     "luxon": "^3.4.3",
@@ -23,6 +24,7 @@
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "urql": "^4.0.5",
     "usehooks-ts": "^2.9.1",
