--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Modify variable and start server
         run: |
-          sed -i 's#DATABASE_URL=postgres://postgres:pgadmin@localhost:5432/postgres?schema=public#DATABASE_URL=postgres://postgres:pgadmin@localhost:5433/postgres?schema=public#g' pretest-api/.env
           cd pretest-api
+          sed -i 's#DATABASE_URL=postgres://postgres:pgadmin@localhost:5432/postgres?schema=public#DATABASE_URL=postgres://postgres:pgadmin@localhost:5433/postgres?schema=public#g' ./.env
           yarn install
           yarn prisma generate
           yarn dev
