--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
           cd pretest-api
           yarn install
           yarn prisma generate
-          yarn dev
+          yarn start
           
 
       - name: Wait for server to start
