--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,10 +9,10 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     env:
-      NODE_BASE_URL: ${{ secrets.NODE_BASE_URL }}
-      HASURA_GRAPHQL_ADMIN_SECRET: ${{ secrets.HASURA_GRAPHQL_ADMIN_SECRET }}
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      VITE_HASURA_BASE_URL: ${{ secrets.VITE_HASURA_BASE_URL }}
+      NODE_BASE_URL: http://host.docker.internal:3000
+      HASURA_GRAPHQL_ADMIN_SECRET: mydevsecret
+      DATABASE_URL: postgres://postgres:pgadmin@localhost:5432/postgres?schema=public
+      VITE_HASURA_BASE_URL: http://localhost:8081
 
     steps:
       - name: Checkout code
