--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,7 @@ jobs:
         run: |
           cd pretest-api
           docker-compose -f ./docker-compose.test.yaml up -d
+          docker ps
 
       - name: Modify variable and start server
         run: |
