--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,8 +38,10 @@ jobs:
         run: |
           cd pretest-api
           yarn install
-          yarn prisma generate
           yarn start
+
+      - name: Sleep
+        run: sleep 30s
 
       - name: Run yarn test
         run: |
