--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,5 +46,5 @@ jobs:
       - name: Run yarn test
         run: |
           yarn install
-          yarn build
+          yarn codegen
           yarn test
